feat(tenant): add tenant pool management apis
