# internal/dashboard/handler/obtenant_handler.go
@@ -586,3 +586,83 @@ func GetOBTenantStatistic(c *gin.Context) ([]response.OBTenantStatistic, error) 
 	}
 	return tenants, nil
 }
+
+// @ID CreateOBTenantPool
+// @Tags Obtenant
+// @Summary Create obtenant pool
+// @Description Create an obtenant pool in a specific namespace
+// @Accept application/json
+// @Produce application/json
+// @Param body body param.TenantPoolSpec true "create obtenant pool request body"
+// @Success 200 object response.APIResponse{data=bool}
+// @Failure 400 object response.APIResponse
+// @Failure 401 object response.APIResponse
+// @Failure 500 object response.APIResponse
+// @Router /api/v1/obtenants/{namespace}/{name}/pools/{zoneName} [PUT]
+// @Security ApiKeyAuth
+func CreateOBTenantPool(c *gin.Context) (bool, error) {
+	nn := param.TenantPoolName{}
+	err := c.BindUri(&nn)
+	if err != nil {
+		return false, httpErr.NewBadRequest(err.Error())
+	}
+
+	p := param.TenantPoolSpec{}
+	err = c.BindJSON(&p)
+	if err != nil {
+		return false, httpErr.NewBadRequest(err.Error())
+	}
+
+	return oceanbase.CreateTenantPool(c, nn, &p)
+}
+
+// @ID DeleteOBTenantPool
+// @Tags Obtenant
+// @Summary Delete obtenant pool
+// @Description Delete an obtenant pool in a specific namespace
+// @Accept application/json
+// @Produce application/json
+// @Success 200 object response.APIResponse{data=bool}
+// @Failure 400 object response.APIResponse
+// @Failure 401 object response.APIResponse
+// @Failure 500 object response.APIResponse
+// @Router /api/v1/obtenants/{namespace}/{name}/pools/{zoneName} [DELETE]
+// @Security ApiKeyAuth
+func DeleteOBTenantPool(c *gin.Context) (bool, error) {
+	nn := param.TenantPoolName{}
+	err := c.BindUri(&nn)
+	if err != nil {
+		return false, httpErr.NewBadRequest(err.Error())
+	}
+
+	return oceanbase.DeleteTenantPool(c, nn)
+}
+
+// @ID PatchOBTenantPool
+// @Tags Obtenant
+// @Summary Patch obtenant pool
+// @Description Patch an obtenant pool in a specific namespace
+// @Accept application/json
+// @Produce application/json
+// @Param body body param.TenantPoolSpec true "patch obtenant pool request body"
+// @Success 200 object response.APIResponse{data=bool}
+// @Failure 400 object response.APIResponse
+// @Failure 401 object response.APIResponse
+// @Failure 500 object response.APIResponse
+// @Router /api/v1/obtenants/{namespace}/{name}/pools/{zoneName} [PATCH]
+// @Security ApiKeyAuth
+func PatchOBTenantPool(c *gin.Context) (bool, error) {
+	nn := param.TenantPoolName{}
+	err := c.BindUri(&nn)
+	if err != nil {
+		return false, httpErr.NewBadRequest(err.Error())
+	}
+
+	p := param.TenantPoolSpec{}
+	err = c.BindJSON(&p)
+	if err != nil {
+		return false, httpErr.NewBadRequest(err.Error())
+	}
+
+	return oceanbase.PatchTenantPool(c, nn, &p)
+}
