# internal/dashboard/router/v1/obtenant_router.go
@@ -34,4 +34,7 @@ func InitOBTenantRoutes(g *gin.RouterGroup) {
 	g.DELETE("/obtenants/:namespace/:name/backupPolicy", h.Wrap(h.DeleteBackupPolicy))
 	g.GET("/obtenants/:namespace/:name/backup/:type/jobs", h.Wrap(h.ListBackupJobs))
 	g.GET("/obtenants/statistic", h.Wrap(h.GetOBTenantStatistic))
+	g.PUT("/obtenants/:namespace/:name/pools/:zoneName", h.Wrap(h.CreateOBTenantPool))
+	g.DELETE("/obtenants/:namespace/:name/pools/:zoneName", h.Wrap(h.DeleteOBTenantPool))
+	g.PATCH("/obtenants/:namespace/:name/pools/:zoneName", h.Wrap(h.PatchOBTenantPool))
 }
